--- a/changes/index.html
+++ b/changes/index.html
@@ -30,17 +30,18 @@
 <body>
 
 <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to My Website///</h1>
 </header>
 
 <div class="container">
-    <h2>About Me</h2>
-    <p>This is a paragraph about myself. You can write anything here to describe yourself.</p>
+   
+    <p>This a is a paragraph about myself. You can write anything here to describe yourself.</p>
 </div>
 
 <footer>
-    <p>&copy; 2024 My Website. All rights reserved.</p>
-</footer>
+   
+<strong>warning</strong>
+<strong>danger</strong>
 
 </body>
 </html>
